[package]
name = "api_key_rotator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dashmap = "5.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tokio-test = "0.4.4"

[lib]
name = "api_key_rotator"
path = "src/lib.rs"
